--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,1 +1,28 @@
-<p>login works!</p>
+<div class="flex items-center justify-center min-h-screen bg-gray-100">
+    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+    <img
+    src="assets/topnavLogo.jpg"
+    alt="Lost and Found"
+    class="w-32 mx-auto mb-4"
+    />
+    <h1 class="text-2xl font-bold text-center mb-6">Lost & Found Login</h1>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="fill" class="w-full mb-4">
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Enter your email" formControlName="email" required />
+    <mat-error *ngIf="email?.invalid && email?.touched">
+    Please enter a valid email.
+    </mat-error>
+    <mat-hint class="text-[#f44336]" *ngIf="itemFamilyRequiredError">Email is not valid , please check once</mat-hint>
+    </mat-form-field>
+    <button
+    mat-raised-button
+    color="primary"
+    class="w-full"
+    [disabled]="loginForm.invalid"
+    >
+    Login
+    </button>
+    </form>
+    </div>
+    </div>
