--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -1,1 +1,67 @@
-<p>view-unclaim works!</p>
+<mat-form-field appearance="outline" class="search-field">
+    <mat-label>Search</mat-label>
+    <input
+      matInput
+      type="text"
+      placeholder="Enter email"
+      [(ngModel)]="searchQuery"
+      (keyup.enter)="search()"
+    />
+    <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
+      <mat-icon>search</mat-icon>
+    </button>
+  </mat-form-field>
+  
+  <div *ngIf="searchResults.length > 0; else noResults">
+    <h3>Search Results:</h3>
+    <table mat-table [dataSource]="searchResults">
+      <ng-container matColumnDef="index">
+        <th mat-header-cell *matHeaderCellDef> # </th>
+        <td mat-cell *matCellDef="let result; let i = index"> {{i + 1}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef> Image </th>
+        <td mat-cell *matCellDef="let result">
+          <img
+            *ngIf="result.image"
+            [src]="result.image"
+            alt="Item Image"
+            class="item-image"
+            style="max-width: 100px; max-height: 100px;" />
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="claimDate">
+        <th mat-header-cell *matHeaderCellDef> Claim Date </th>
+        <td mat-cell *matCellDef="let result"> {{ result.claimDate | date }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <td mat-cell *matCellDef="let result"> {{ result.status | titlecase }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let result">
+          <button
+            *ngIf="result.status !== 'claimed'"
+            mat-raised-button
+            [color]="getButtonColor(result.status)"
+            (click)="confirmUnclaim(result)"
+          >
+            Unclaim
+          </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+  
+  <ng-template #noResults>
+    <p *ngIf="searchQuery">No results found for "{{ searchQuery }}"</p>
+  </ng-template>
+  
