--- a/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
+++ b/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
@@ -3,6 +3,6 @@
   <p>{{ data.message }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="cancel()">No</button>
-  <button mat-button color="warn" (click)="confirm()">Yes</button>
+  <button mat-button class="no-button" (click)="cancel()">No</button>
+  <button mat-button color="warn" class="yes-button" (click)="confirm()">Yes</button>
 </div>
