--- a/src/app/features/view-unclaim/view-unclaim.component.scss
+++ b/src/app/features/view-unclaim/view-unclaim.component.scss
@@ -4,3 +4,10 @@
     object-fit: cover; 
   }
   
+  .error-message {
+    color: red;
+    font-size: 1rem;
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  
