--- a/src/app/features/search-claim/search-claim.component.scss
+++ b/src/app/features/search-claim/search-claim.component.scss
@@ -7,7 +7,7 @@
 .search-button {
     display: flex;
     align-items: center;
-    width: 10%;
+    width: 15%;
     height: 40px;
     margin-top: 10px;
 }
@@ -48,3 +48,40 @@
     padding: 20px; 
     background-color: #f9f9f9;
   }
+  .center-content {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;   
+    justify-content: center; 
+    height: 82%;            
+  }
+  mat-form-field {
+    width: 100%;             
+    max-width: 300px;        
+    margin-bottom: 16px;    
+  }
+
+ .card-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex: 1 1 200px; 
+    max-width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.no-data-container {
+    display: flex;
+    justify-content: center;
+    height: 50vh;
+}
+
+.no-data-img {
+    max-width: 100%; 
+    max-height: 100%; 
+}
