--- a/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
+++ b/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
@@ -1,8 +1,20 @@
-<h1 mat-dialog-title>Confirmation</h1>
-<div mat-dialog-content>
-  <p>{{ data.message }}</p>
+<div class="flex flex-row items-center justify-between content-center px-3 py-1 bg-transparent">
+  <h3 class="font-semibold px-2 text-xl">
+    {{ data.title }}
+  </h3>
+  <button mat-icon-button type="button" (click)="onCancel()">
+    <mat-icon>close</mat-icon>
+  </button>
 </div>
-<div mat-dialog-actions>
-  <button mat-button class="no-button" (click)="cancel()">No</button>
-  <button mat-button color="warn" class="yes-button" (click)="confirm()">Yes</button>
-</div>
+<mat-divider></mat-divider>
+<mat-dialog-content align="start" class="mt-2" style="border-radius: 0px;">
+  <div *ngIf="data.message">
+    <p>{{ data.message }}</p>
+  </div>
+</mat-dialog-content>
+<mat-dialog-actions align="end" class="m-2">
+  <button mat-stroked-button color="warn" class="cancel-button" (click)="onCancel()">
+    No
+  </button>
+  <button mat-flat-button color="primary" (click)="onSubmit()">Yes</button>
+</mat-dialog-actions>
