--- a/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.scss
+++ b/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.scss
@@ -1,35 +1,3 @@
-:host {
-    display: block;
-    text-align: center;
-    width: 500px;  
-    height: 150px;
-    margin: 0 auto;    
-}
-
-/* Title styling */
-h1 {
-  font-size: 1.25rem;  
-  font-weight: 500;    
-  color: #333;
-  margin-bottom: 1.5rem;  
-}
-p {
-    font-size: 1.25rem; 
-    font-weight: 200;    
-    color: #333;
-    margin-bottom: 1.1rem; 
-  }
-
-
-.no-button {
-  background-color: red;
-  color: white;  
-  margin-right: 100px;
- 
-}
-
-
-.yes-button {
-  background-color: green;
-  color: white;  
+:host ::ng-deep .mat-mdc-dialog-surface {
+  border-radius: 0px;
 }
