--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -1,71 +1,54 @@
 <mat-form-field appearance="outline" class="search-field">
-    <mat-label>Search</mat-label>
-    <input
-      matInput
-      type="text"
-      placeholder="Enter email"
-      [(ngModel)]="searchQuery"
-      (keyup.enter)="search()" 
-      (input)="clearResultsIfEmpty()"
-    />
-    <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
-      <mat-icon>search</mat-icon>
-    </button>
-  </mat-form-field>
-  
-  <!-- Display error message when no email is found -->
-  <div *ngIf="showNoResults" class="error-message">
-    <p>No results found for the entered email address.</p>
-  </div>
-  
-  <div *ngIf="searchResults.length > 0">
-    <h3>Search Results:</h3>
-    <table mat-table [dataSource]="searchResults">
-      <ng-container matColumnDef="index">
-        <th mat-header-cell *matHeaderCellDef> # </th>
-        <td mat-cell *matCellDef="let result; let i = index"> {{i + 1}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="image">
-        <th mat-header-cell *matHeaderCellDef> Image </th>
-        <td mat-cell *matCellDef="let result">
-          <img
-            *ngIf="result.image"
-            [src]="result.image"
-            alt="Item Image"
-            class="item-image"
-            style="max-width: 100px; max-height: 100px;" />
-        </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="claimDate">
-        <th mat-header-cell *matHeaderCellDef> Claim Date </th>
-        <td mat-cell *matCellDef="let result"> {{ result.claimDate | date }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let result"> {{ result.status | titlecase }} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let result">
-          <button
-            *ngIf="result.status !== 'claimed'"
-            mat-raised-button
-            [color]="getButtonColor(result.status)"
-            (click)="confirmUnclaim(result)"
-          >
-            Unclaim
-          </button>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-  
+  <mat-label>Search</mat-label>
+  <input matInput type="text" placeholder="Enter email" [(ngModel)]="searchQuery" (keyup.enter)="search()"
+    (input)="clearResultsIfEmpty()" />
+  <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
+    <mat-icon>search</mat-icon>
+  </button>
+</mat-form-field>
 
-  
+<!-- Display error message when no email is found -->
+<div *ngIf="showNoResults" class="error-message">
+  <p>No results found for the entered email address.</p>
+</div>
+
+<div *ngIf="searchResults.length > 0">
+  <h3>Search Results:</h3>
+  <table mat-table [dataSource]="searchResults">
+    <ng-container matColumnDef="index">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let result; let i = index"> {{i + 1}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef> Image </th>
+      <td mat-cell *matCellDef="let result">
+        <img *ngIf="result.image" [src]="result.image" alt="Item Image" class="item-image"
+          style="max-width: 100px; max-height: 100px;" />
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="claimDate">
+      <th mat-header-cell *matHeaderCellDef> Claim Date </th>
+      <td mat-cell *matCellDef="let result"> {{ result.claimDate | date }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let result"> {{ result.status | titlecase }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let result">
+        <button *ngIf="result.status !== 'claimed'" mat-raised-button [color]="getButtonColor(result.status)"
+          (click)="confirmUnclaim(result)">
+          Unclaim
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
