--- a/src/app/features/search-claim/search-claim.component.scss
+++ b/src/app/features/search-claim/search-claim.component.scss
@@ -1,87 +1,45 @@
-.small-input {
-    max-width: 30%;
-    width: 100%;
-}
-
-
-.search-button {
+.lablestyle{
+    margin-bottom: '20px'
+    }
+    .mat-card {
+    @apply bg-white p-4 rounded-lg;
+    }
+    .mat-card-title {
+    @apply text-xl font-bold;
+    }
+    .mat-tab-group {
     display: flex;
+    justify-content: center;
     align-items: center;
-    width: 15%;
-    height: 40px;
-    margin-top: 10px;
-}
-
-.item-image {
-    height: 200px; 
-    width: 200px; 
-    object-fit: cover; 
-    margin: 0 auto; 
-}
-
-.lablestyle {
-    display: flex;
-    flex-direction: column; 
-    width: 100%;
-}
-
-.mt-2 {
-    margin-top: 4px; 
-}
-.upload-container {
+    height: 100vh;
+    
+    }
+    
+    .mat-tab-body-content {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    max-width: 100%;
-    text-align: center; 
-    height: 91%;
-  }
-  
-  .dropzone {
-    width: 100%; 
-    max-width: 60%; 
-    min-height: 150px; 
-    border: 2px dashed #2196f3; 
-    border-radius: 8px; 
-    padding: 20px; 
-    background-color: #f9f9f9;
-  }
-  .center-content {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;   
-    justify-content: center; 
-    height: 82%;            
-  }
-  mat-form-field {
-    width: 100%;             
-    max-width: 300px;        
-    margin-bottom: 16px;    
-  }
-
- .card-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.card {
-    flex: 1 1 200px; 
-    max-width: 300px;
-    display: flex;
     justify-content: center;
     align-items: center;
-}
-
-
-.no-data-container {
-    display: flex;
+    width: 100%;
+    text-align: center;
+    }
+    
+    .flex {
     justify-content: center;
-    height: 50vh;
-}
-
-.no-data-img {
-    max-width: 100%; 
-    max-height: 100%; 
-}
+    align-items: center;
+    }
+    
+    .grid {
+    display: grid;
+    gap: 16px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+    }
+    
+    .mat-card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    
+    .mat-card:hover {
+    transform: translateY(-5px); 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+    }
