--- a/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
+++ b/src/app/features/confirmation-dialog-component/confirmation-dialog-component.component.html
@@ -13,8 +13,8 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end" class="m-2">
-  <button mat-stroked-button color="warn" class="cancel-button" (click)="onCancel()">
+  <button  mat-button mat-dialog-close color="warn" (click)="onCancel()">
     No
   </button>
-  <button mat-flat-button color="primary" (click)="onSubmit()">Yes</button>
+  <button mat-flat-button [mat-dialog-close]="true" color="primary" (click)="onSubmit()">Yes</button>
 </mat-dialog-actions>
