--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -1,18 +1,52 @@
-<mat-form-field appearance="outline" class="search-field">
-  <mat-label>Search</mat-label>
-  <input matInput type="text" placeholder="Enter email" [(ngModel)]="searchQuery" (keyup.enter)="search()"
-    (input)="clearResultsIfEmpty()" />
-  <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
-    <mat-icon>search</mat-icon>
-  </button>
-</mat-form-field>
 
-<!-- Display error message when no email is found -->
-<div *ngIf="showNoResults" class="error-message">
-  <p>No results found for the entered email address.</p>
+<div class="min-h-screen flex flex-col">
+  <div class="flex-none px-gutter pt-5 pb-5  bg-[#E8F2F3] ">
+    <div @fadeInRight class="flex flex-row justify-between px-5">
+      <div class="flex flex-col">
+        <h1 class="font-semibold max-w-3xs mr-6 text-2xl">View / Unclaim Item</h1>
+
+      </div>
+
+      <div *ngIf="showNoResults" class="error-message">
+        <p>No results found for the entered email address.</p>
+      </div>
+      
+    </div>
+    <div class="flex-grow px-5">
+      <mat-card>
+        <mat-accordion @fadeInUp>
+          <mat-expansion-panel hideToggle [expanded]="false" (opened)="containerPanelOpened = true"
+            (closed)="containerPanelOpened = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title class="text-lg">
+                <h3 class="font-semibold">Search</h3>
+              </mat-panel-title>
+              <mat-icon>{{ containerPanelOpened ? 'expand_less' : 'expand_more' }}</mat-icon>
+              
+
+            </mat-expansion-panel-header>
+            <mat-form-field appearance="outline" class="search-field">
+              <mat-label>Search</mat-label>
+              <input matInput type="text" placeholder="Enter email" [(ngModel)]="searchQuery" (keyup.enter)="search()"
+                (input)="clearResultsIfEmpty()" />
+              <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
+                <mat-icon>search</mat-icon>
+              </button>
+            </mat-form-field>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-card>
+    </div>
+  </div>
+  <div class="flex-grow mt-14 mx-3">
+    <app-datatable [tableData]="searchResults" [tableColumns]="displaycoloums" [isPageable]="true"
+      [paginationSizes]="[5, 10, 15, 20]" [defaultPageSize]="15"></app-datatable>
+  </div>
 </div>
 
-<div *ngIf="searchResults.length > 0">
+
+
+<!-- <div *ngIf="searchResults.length > 0">
   <h3>Search Results:</h3>
   <table mat-table [dataSource]="searchResults">
     <ng-container matColumnDef="index">
@@ -51,4 +85,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-</div>
+</div> -->
