--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,20 +1,32 @@
 <div class="flex items-center justify-center h-full">
     <div class="bg-white mt-16 p-8 rounded-lg shadow-md w-full max-w-md">
-        <img src="assets/topnavLogo.jpg" alt="Lost and Found" class="w-32 mx-auto mb-4" />
-        <h1 class="text-2xl font-bold text-center mb-6">Lost & Found Login</h1>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <mat-form-field appearance="fill" class="w-full mb-4">
-                <mat-label>Email</mat-label>
-                <input matInput placeholder="Enter your email" formControlName="email" required />
-                <mat-error *ngIf="email?.invalid && email?.touched">
-                    Please enter a valid email.
-                </mat-error>
-                <mat-hint class="text-[#f44336]" *ngIf="itemFamilyRequiredError">Email is not valid , please check
-                    once</mat-hint>
-            </mat-form-field>
-            <button mat-raised-button color="primary" class="w-full" [disabled]="loginForm.invalid">
-                Login
-            </button>
-        </form>
+      <img src="assets/topnavLogo.jpg" alt="Lost and Found" class="w-32 mx-auto mb-4" />
+      <h1 class="text-2xl font-bold text-center mb-6">Lost & Found Login</h1>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill" class="w-full mb-4">
+          <mat-label>Email</mat-label>
+          <input matInput placeholder="Enter your email" formControlName="email" required />
+          <mat-error *ngIf="email?.invalid && email?.touched">
+            Please enter a valid email.
+          </mat-error>
+        </mat-form-field>
+  
+        <mat-form-field appearance="fill" class="w-full mb-4">
+          <mat-label>Password</mat-label>
+          <input matInput placeholder="Enter your password" type="password" formControlName="password" required />
+          <mat-error *ngIf="password?.invalid && password?.touched">
+            Password must be at least 6 characters.
+          </mat-error>
+        </mat-form-field>
+  
+        <mat-hint class="text-[#f44336]" *ngIf="itemFamilyRequiredError">
+          {{ itemFamilyRequiredErrorMessage }}
+        </mat-hint>
+  
+        <button mat-raised-button color="primary" class="w-full" [disabled]="loginForm.invalid">
+          Login
+        </button>
+      </form>
     </div>
-</div>
+  </div>
+  
