changes for footer

--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -50,7 +50,7 @@
           minimized: !isSideNavStatus,
           maximized: isSideNavStatus
         }">
-        <div class="p-6">
+        <div>
           <router-outlet></router-outlet>
         </div>
       </mat-sidenav-content>
