--- a/src/app/features/datatable/datatable.component.html
+++ b/src/app/features/datatable/datatable.component.html
@@ -1,45 +1,50 @@
-<div class="bg-gray-100 px-6 h-16 border-b sticky left-0 flex items-center" *ngIf="dataSource.data.length > 0">
+<div class="bg-gray-100  rounded-4xl shadow" *ngIf="dataSource.data.length > 0">
     <span class="flex-1"></span>
     <div class="flex-row flex-wrap gap-2 hidden lg:flex xl:flex">
         <!--Need to loop -->
         <div class="rounded-2xl px-2 py-2 font-medium text-sm flex-none text-[#1b6772] bg-[#E8F2F3] max-w-fit"></div>
         <div class="rounded-2xl px-2 py-2 font-medium text-sm flex-none text-[#1b6772] bg-[#E8F2F3] max-w-fit"></div>
     </div>
-</div>
-
-<div class="min-h-screen flex flex-col">
-    <table mat-table [dataSource]="dataSource" matSort matTableFilter>
-        <ng-container class="font-bold" *ngFor="let tableColumn of tableColumns" [matColumnDef]="tableColumn.name">
-            <ng-container>
-                <th mat-header-cell *matHeaderCellDef [mat-sort-header]="tableColumn.name" disableClear>
-                    {{ tableColumn.label }}
-                </th>
-            </ng-container>
-            <td mat-cell *matCellDef="let element  let i = index" class="col-data">
-                <div>
-                    <div class="column-overflow" *ngIf="tableColumn.type !== 'image' && tableColumn.label !== 'Skill'">
-                        {{ element | dataPropertyGetter : tableColumn.name }}
+    <div class="bg-white rounded-full px-4 max-w-[300px] flex-auto flex items-center border border-gray-300">
+        <mat-icon class="icon-sm text-secondary">search</mat-icon>
+        <input class="px-4 py-2 border-0 outline-none w-full bg-transparent" placeholder="Search" type="search" />
+    </div>
+    <div class="table-responsive custom-print-table">
+        <table mat-table [dataSource]="dataSource" matSort matTableFilter>
+            <ng-container class="font-bold" *ngFor="let tableColumn of tableColumns" [matColumnDef]="tableColumn.name">
+                <ng-container>
+                    <th mat-header-cell *matHeaderCellDef [mat-sort-header]="tableColumn.name" disableClear>
+                        {{ tableColumn.label }}
+                    </th>
+                </ng-container>
+                <td mat-cell *matCellDef="let element  let i = index" class="col-data">
+                    <div>
+                        <div class="column-overflow" *ngIf="tableColumn.type !== 'image' && tableColumn.label !== 'Skill'">
+                            {{ element | dataPropertyGetter : tableColumn.name }}
+                        </div>
                     </div>
-                </div>
-                <div *ngIf="tableColumn.type === 'image'">
-                    <img [src]="element.image" alt="Item Image" class="item-image"
-                        style="max-width: 100px; max-height: 100px;" />
-                </div>
-                <div *ngIf="tableColumn.type === 'action'">
-                    <button *ngIf="element.status !== 'claimed'" mat-raised-button [color]="getButtonColor(element.status)"
-                   >
-                    Unclaim
-                  </button>
-                </div>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row @fadeInUp *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator #paginator *ngIf="isPageable" [pageSizeOptions]="paginationSizes" [pageSize]="defaultPageSize">
-    </mat-paginator>
+                    <div *ngIf="tableColumn.type === 'image'">
+                        <img [src]="element.image" alt="Item Image" class="item-image"
+                            style="max-width: 100px; max-height: 100px;" />
+                    </div>
+                    <div *ngIf="tableColumn.type === 'action'">
+                        <button *ngIf="element.status !== 'claimed'" mat-raised-button
+                            [color]="getButtonColor(element.status)">
+                            Unclaim
+                        </button>
+                    </div>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row @fadeInUp *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+    
+        <mat-paginator #paginator *ngIf="isPageable" [pageSizeOptions]="paginationSizes" [pageSize]="defaultPageSize">
+        </mat-paginator>
+    </div>
 </div>
+
+
 <div *ngIf="dataSource.data.length === 0" class="relative flex flex-col items-center justify-center">
     <!-- <img src="../../../../assets/NoResult.png" class="absolute w-128 object-contain p-3" alt="Image" /> -->
     <p class="mt-36 p-3 text-center text-teal-600 tracking-tight">
