--- a/src/app/features/datatable/datatable.component.scss
+++ b/src/app/features/datatable/datatable.component.scss
@@ -293,7 +293,9 @@
   .paginator{
     display: none;
   }
-  
+  :host ::ng-deep .backgrougcolour {
+    color: rgb(224, 19, 64);
+  }
   .mat-icon.custom-icon {
     font-size: 24px; 
     width: 20px; 
@@ -331,3 +333,4 @@
     overflow: hidden;
     white-space: nowrap;
   }
+  
