--- a/src/app/features/view-unclaim/view-unclaim.component.html
+++ b/src/app/features/view-unclaim/view-unclaim.component.html
@@ -1,4 +1,3 @@
-
 <div class="min-h-screen flex flex-col">
   <div class="flex-none px-gutter pt-5 pb-5  bg-[#E8F2F3] ">
     <div @fadeInRight class="flex flex-row justify-between px-5">
@@ -10,7 +9,7 @@
       <div *ngIf="showNoResults" class="error-message">
         <p>No results found for the entered email address.</p>
       </div>
-      
+
     </div>
     <div class="flex-grow px-5">
       <mat-card>
@@ -22,14 +21,14 @@
                 <h3 class="font-semibold">Search</h3>
               </mat-panel-title>
               <mat-icon>{{ containerPanelOpened ? 'expand_less' : 'expand_more' }}</mat-icon>
-              
+
 
             </mat-expansion-panel-header>
             <mat-form-field appearance="outline" class="search-field">
-              <mat-label>Search</mat-label>
-              <input matInput type="text" placeholder="Enter email" [(ngModel)]="searchQuery" (keyup.enter)="search()"
+              <mat-label>Email</mat-label>
+              <input matInput type="text" placeholder="Email" [(ngModel)]="searchQuery" (keyup.enter)="search()"
                 (input)="clearResultsIfEmpty()" />
-              <button mat-icon-button matSuffix (click)="search()" aria-label="Search">
+              <button mat-icon-button matSuffix (click)="search()" aria-label="Email">
                 <mat-icon>search</mat-icon>
               </button>
             </mat-form-field>
@@ -42,6 +41,10 @@
     <app-datatable [tableData]="searchResults" [tableColumns]="displaycoloums" [isPageable]="true"
       [paginationSizes]="[5, 10, 15, 20]" [defaultPageSize]="15"></app-datatable>
   </div>
+
+</div>
+<div class="flex-grow mt-2 mx-3">
+  <app-footer></app-footer>
 </div>
 
 
