changes for no records

--- a/src/app/features/datatable/datatable.component.html
+++ b/src/app/features/datatable/datatable.component.html
@@ -46,7 +46,7 @@
 
 
 <div *ngIf="dataSource.data.length === 0" class="relative flex flex-col items-center justify-center">
-    <!-- <img src="../../../../assets/NoResult.png" class="absolute w-128 object-contain p-3" alt="Image" /> -->
+    <img src="assets/noresults.png" class="absolute w-56 mt-36  object-contain " alt="Image" />
     <p class="mt-36 p-3 text-center text-teal-600 tracking-tight">
         No Records Found
     </p>
